--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
 <body class="bg-gray-900 text-gray-100 overflow-hidden">
   <app-root></app-root>
